--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
         rel="stylesheet">
+
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -26,9 +28,9 @@
 
             <div class="button-group">
                 <p class="subdescription">Porções</p>
-                <button class="btn-up"><img src="/assets/vector_down.svg"></button>
-                <p class="subdescription">01</p>
-                <button class="btn-up"><img src="/assets/vector_up.svg"></button>
+                <button class="btn-up" onclick="down()"><img src="/assets/vector_down.svg"></button>
+                <p class="subdescription" id="variable">0</p>
+                <button class="btn-up" onclick="up()"><img src="/assets/vector_up.svg"></button>
             </div>
 
         </article>
@@ -58,7 +60,6 @@
                 <ol>
                     <li>Descasque a espiga de milho e corte os grãos.</li>
                     <li>Bata o milho, açúcar, manteiga e sal no liquidificador.</li>
-                    <li>1 colher de sopa de manteiga</li>
                     <li>Coloque a massa nas palhas de milho e feche bem.</li>
                     <li>Cozinhe em água fervente por cerca de 40 minutos</li>
                     <li>Deixe esfriar e sirva</li>
